<resources>
    <string name="app_name">Buho Lector</string>

    <!-- Comunes  -->
    <string name="edtx_user">Usuario</string>
    <string name="edtx_pass">Password</string>

    <!-- activity_login  -->
    <string name="txt_titulo">Bienvenido</string>
    <string name="btn_login">Iniciar Sesión</string>
    <string name="tv_registrarme">Registrarme</string>

    <!-- activity_registrousuario  -->
    <string name="edtx_correo">Correo electrónico</string>
    <string name="btn_registro">Crear Cuenta</string>
    <string name="txt_existe_cuenta">¿Ya tienes cuenta?</string>
    <string name="txt_inicio_sesion">Iniciar sesión</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Inicio</string>
    <string name="title_more">Más</string>
    <string name="title_my_books">Mis libros</string>
    <string name="title_loan_books">Préstamo</string>
    <string name="title_notifications">Alertas</string>

    <!-- activity_home  -->

</resources>