<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="pe.edu.upc.moviles.buholector.ui.home.HomeFragment"
        android:label="@string/title_home"

        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/navigation_loan_books"
        android:name="pe.edu.upc.moviles.buholector.ui.LoanBooks"
        android:label="@string/title_loan_books"
        tools:layout="@layout/fragment_loan_books" />

    <fragment
        android:id="@+id/navigation_my_books"
        android:name="pe.edu.upc.moviles.buholector.ui.MyBooks"
        android:label="@string/title_my_books"
        tools:layout="@layout/fragment_my_books" />
    <fragment
        android:id="@+id/navigation_notifications"
        android:name="pe.edu.upc.moviles.buholector.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/navigation_more"
        android:name="pe.edu.upc.moviles.buholector.ui.more.More"
        android:label="@string/title_more"
        tools:layout="@layout/fragment_more" />

</navigation>