<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.view.LoginActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/fondo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="25dp"
        android:layout_marginEnd="0dp"
        android:layout_marginRight="0dp"
        android:gravity="center"
        android:background="#70000000"
        android:orientation="vertical">


        <TextView
            android:id="@+id/txtTitulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_titulo"
            android:textSize="36sp"
            android:textStyle="bold|italic"
            android:textColor="#fff"/>

        <EditText
            android:id="@+id/edtxUserName"
            android:layout_width="344dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="15dp"
            android:drawableStart="@drawable/icon_email"
            android:hint="@string/edtx_user"
            android:inputType="text"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp"
            android:background="@drawable/input"
            android:textColor="#fff"
            android:textColorHint="@android:color/background_light" />

        <EditText
            android:id="@+id/edtxPassword"
            android:layout_width="344dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/input"
            android:drawableLeft="@drawable/icon_lock"
            android:hint="@string/edtx_pass"
            android:inputType="textPassword"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp"
            android:textColor="#fff"
            android:textColorHint="@android:color/background_light" />

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/btn_fondo_color"
            android:text="@string/btn_login"
            android:textColor="#FFF"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tvRegistrarme"
            android:layout_width="87dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginRight="122dp"
            android:clickable="true"
            android:text="@string/tv_registrarme"
            android:textColor="#fff" />

    </LinearLayout>

</RelativeLayout>